# sagemaker-poc

./: LICENSE  README.md  pyproject.toml  requirements.txt
mnist_sagemaker/: config.py  mnist.py  sagemaker_delete.py  sagemaker_deploy.py  sagemaker_test.py  sagemaker_train.py
