[tool.poetry]
name = "mnistsagemaker"
version = "0.1.0"
description = ""
authors = ["Mohamed Reda LARBI YOUCEF <mohamed-reda.larbi-youcef@cockpitio.com>"]
readme = "README.md"
packages = [{include = "mnist_sagemaker"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.19.0"
sagemaker = "^2.229.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
